--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,10 @@
 
     <%= yield %>
 
+    <!-- Loadie.js -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/jquery.loadie.min.js"></script>
+
     <script src="/assets/classie.js"></script>
     <script src="/assets/demo1.js"></script>
     <!-- Garamond Pro Font -->
