--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<div id="loading">
+  <img id="loading-image" src="/assets/loading-3.gif" alt="Loading..." />
+  <p id="loading-text">Loading . . .</p>
+</div>
 <header>
 <section id="slide-1" class="homeSlide">
   <div class="header">
@@ -179,6 +183,10 @@
     </div>
   </div>
 </footer>
+<script language="javascript" type="text/javascript">
+$(window).load(function() {
+   $('#loading').hide();
+});</script>
 <script type="text/javascript">
   $(document).ready(function(){
 
