reload javascript when browser back / forward click script added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<input type="hidden" id="refresh" value="no">
 <div id="loading">
   <img id="loading-image" src="/assets/loading-3.gif" alt="Loading..." />
   <p id="loading-text">Loading . . .</p>
