--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -1,3 +1,4 @@
+<input type="hidden" id="refresh" value="no">
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
    <div class="container">
        <div class="navbar-header">
