--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,6 @@
 
   </head>
   <body>
-
     <%= yield %>
 
     <!-- Loadie.js -->
@@ -46,5 +45,13 @@
     <script src="/assets/TweenMax.min.js"  type="text/javascript"></script>
     <script src="/assets/aos.js"  type="text/javascript"></script>
     <!-- <script src="/assets/enquire.min.js"  type="text/javascript"></script> -->
+    <!-- Reloads Javascript when back / forward click in broswer -->
+    <script type="text/javascript">
+    $(document).ready(function(e) {
+      var $input = $('#refresh');
+
+      $input.val() == 'yes' ? location.reload(true) : $input.val('yes');
+    });
+    </script>
   </body>
 </html>
