reload javascript on browser forward and back click script added to index and work page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -184,6 +184,14 @@
     </div>
   </div>
 </footer>
+<!-- Reloads Javascript when back / forward click in broswer -->
+<script type="text/javascript">
+$(document).ready(function(e) {
+  var $input = $('#refresh');
+
+  $input.val() == 'yes' ? location.reload(true) : $input.val('yes');
+});
+</script>
 <script language="javascript" type="text/javascript">
 $(window).load(function() {
    $('#loading').hide();
