--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -361,6 +361,14 @@
     </div>
   </div>
 </footer>
+<!-- Reloads Javascript when back / forward click in broswer -->
+<script type="text/javascript">
+$(document).ready(function(e) {
+  var $input = $('#refresh');
+
+  $input.val() == 'yes' ? location.reload(true) : $input.val('yes');
+});
+</script>
 <script type="text/javascript">
 $(document).ready(function(){
   var $img = $('.intro');
