--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -184,7 +184,7 @@
     </div>
   </div>
 </footer>
-<!-- Reloads Javascript when back / forward click in broswer -->
+<!-- Refresh Indicator Reloads Javascript when back / forward click in broswer -->
 <script type="text/javascript">
 $(document).ready(function(e) {
   var $input = $('#refresh');
