--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -1,3 +1,4 @@
+<!-- Refresh Indicator -->
 <input type="hidden" id="refresh" value="no">
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
    <div class="container">
@@ -79,7 +80,7 @@
         <div class="row">
             <div class="display col-lg-12 text-center">
               <div class="col-md-6 col-md-offset-3 text-center">
-                <a data-toggle="modal" data-target=".ts-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-landing-v2.png"></a>
+                <a data-toggle="modal" data-target=".ts-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="../assets/tagsnooper-home-v2.png"></a>
               </div>
             </div>
               <div class="col-lg-12 text-center">
@@ -102,7 +103,7 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                 <img class="img-responsive" src="/assets/tagsnooper-landing-v2.png" alt="...">
+                 <img class="img-responsive" src="/assets/tagsnooper-home-v2.png" alt="...">
                   <div class="carousel-caption">
                   </div>
                 </div>
@@ -361,7 +362,7 @@
     </div>
   </div>
 </footer>
-<!-- Reloads Javascript when back / forward click in broswer -->
+<!-- Refresh Indicator - reloads Javascript when back / forward click in broswer -->
 <script type="text/javascript">
 $(document).ready(function(e) {
   var $input = $('#refresh');
